Fix behaviour in case where query parameters are present; tweak spacing

--- a/quarkus-workshop-super-heroes/docs/src/docs/asciidoc/assets/css/hol.css
+++ b/quarkus-workshop-super-heroes/docs/src/docs/asciidoc/assets/css/hol.css
@@ -249,7 +249,7 @@ button:hover {
 .big {
     width: 60%;
     height: 60px;
-    margin-top: 1em;
+    margin-top: 2em;
     margin-bottom: 1em;
     padding: 1em;
     font-size: 1.2em;
